# ChatBot_Telecomunicacao

./: README.md  agentes.py  pyproject.toml
src/chatbot_telecomunicacao/: crew.py  main.py
src/chatbot_telecomunicacao/config/: agents.yaml  tasks.yaml
src/chatbot_telecomunicacao/tools/: custom_tool.py
